test/e2e/testdata/templates/ingress-enablement-missing/module/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: e2e-ingress-enablement-missing
  namespace: e2e-ingress-enablement-missing
spec:
  rules:
    - host: e2e.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: e2e
                port:
                  number: 80
